Fixing an icon problem

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,10 @@
     "browser_action": {
         "default_title": "bootstrap3 offline",
         "default_popup": "index.html",
-        "default_icon": { "19": "/favicon.ico" }
+        "default_icon": { 
+          "19": "bootstrap.png",
+          "128": "bootstrap.png" 
+        }
     },
     "background": {
       "scripts": ["background.js"]
