--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "bootstrap3",
+    "name": "Offline Bootstrap 3",
     "version": "0.0.1",
     "manifest_version": 2,
     "browser_action": {
